crates/eml_cli/tests/snapshots/integration__ui__run@classes__across_modules.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/classes/across_modules/main.em
---
--- stdout ---
14
--- stderr ---
