crates/eml_cli/tests/snapshots/integration__ui__run@classes__derived_recursive_types.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/classes/derived_recursive_types.em
---
--- stdout ---
Cons 1 (Cons 2 Nil)
True LT
Node (More (Leaf 1) Empty)
False
--- stderr ---
