crates/eml_cli/tests/snapshots/integration__ui__run@classes__extern_method_values.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/classes/extern_method_values.em
---
--- stdout ---
1 "a" True
LT True
--- stderr ---
