crates/eml_cli/tests/snapshots/integration__ui__run@classes__fewer_parameters.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/classes/fewer_parameters.em
---
--- stdout ---
pick red
pick green
red+green
--- stderr ---
