crates/eml_cli/tests/snapshots/integration__ui__run@classes__method_at_larger_type.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/classes/method_at_larger_type.em
---
--- stdout ---
True
False
False
--- stderr ---
