crates/eml_cli/tests/snapshots/integration__ui__run@classes__method_values.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/classes/method_values.em
---
--- stdout ---
21
10
9
--- stderr ---
