crates/eml_cli/tests/snapshots/integration__ui__run@classes__method_variables.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/classes/method_variables.em
---
--- stdout ---
42
box:7
--- stderr ---
