crates/eml_cli/tests/snapshots/integration__ui__run@classes__tuples.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/classes/tuples.em
---
--- stdout ---
True True True
(1, "two", (True, ()))
GT
--- stderr ---
